Fix x overflow

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,10 @@
 .app {
   background-color: var(--primary-color);
   font-family: var(--font-base);
+  max-width: 100vw;
+  -webkit-overflow-scrolling: none;
+  overflow: hidden;
+  overscroll-behavior: none;
 }
 
 .app__whitebg {
@@ -104,13 +108,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
   padding: 0.5rem;
 
   .app__navigation-dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
+    width: 5px;
+    height: 20px;
+    border-radius: 20%;
     background-color: #cbcbcb;
     margin: 0.5rem;
 
@@ -121,15 +124,14 @@
     }
 
     @media screen and (min-width: 2000px) {
-      width: 20px;
-      height: 20px;
+      width: 7px;
+      height: 25px;
     }
   }
 }
 
 @media screen and (max-width: 500px) {
-  .app__navigation,
-  .app__social {
+  .app__navigation {
     display: none;
   }
 }
